<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".mainScreen.fragment.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/llStation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/main_tile_background"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@mipmap/ic_bcycle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/station_text"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPricing"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/main_tile_background"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@mipmap/ic_tag" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pricing_text"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPhone"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/main_tile_background"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@mipmap/ic_phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone_text"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/llHiring"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/main_tile_background"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@mipmap/ic_qmark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/how_hire_text"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPlaces"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/main_tile_background"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@mipmap/ic_lmark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/membership_places_text"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llFeedback"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@drawable/main_tile_background"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@mipmap/ic_mail" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/feedback_text"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
