<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@mipmap/infobubble">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="İstasyonun adı"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bisimstation_state_text"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tvAvailableBcycle"
                android:layout_alignTop="@id/txtState"
                android:text="Aktif"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmptypark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtState"
                android:text="@string/bisimstation_emptypark_text"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEmptypark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tvAvailableBcycle"
                android:layout_alignTop="@id/txtEmptypark"
                android:text="34"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txtAvailableBcycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEmptypark"
                android:text="@string/bisimstation_availablebcycle_text"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAvailableBcycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/txtAvailableBcycle"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_toRightOf="@id/txtAvailableBcycle"
                android:text="0"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>